ctowasm/test/samples/error/test.c
int main() {
  enum { a };
  int x = a;
}